# granular_effect

./: Cargo.toml  README.md  bundler.toml
scripts/: test_pedalboard.py
src/: lib.rs
