[package]
name = "granular_effect"
version = "0.1.0"
edition = "2021"
authors = ["Zukky <zukky.rikugame@gmail.com>"]
license = "ISC"
homepage = "https://github.com/SuzukiDaishi"
description = "A simple granular effect."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec = "0.7.6"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
rand = "0.9.1"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
